######## 2015-1-5##########
create unique index uniq_item_outer_and_sku_id on shop_memorule_composerule(`outer_id`,`outer_sku_id`,`type`) ;
######## 2014-12-20##########
alter table shop_flashsale_supplier add column memo varchar(1024) NOT NULL;
######## 2014-12-18##########
alter table shop_flashsale_product add column contactor_id int(11) references auth_user(id);
alter table games_bomb_weixinbomb add column creator_id int(11) references auth_user(id);
######## 2014-12-12 ##########
alter table shop_flashsale_product add column sale_price double NOT NULL;
alter table shop_flashsale_product add column memo varchar(1024) NOT NULL;
######## 2014-12-12 ##########
alter table shop_flashsale_product add column hot_value int(11) NOT NULL;
######## 2014-12-9 ##########
alter table shop_flashsale_product add column status varchar(16) NOT NULL;
update shop_flashsale_product set status='wait';
######## 2014-10-30 ##########
alter table shop_weixin_user_award add select_val int(11) NOT NULL;
alter table supplychain_pick_item add identity  int(11) NOT NULL;
######## 2014-10-22 ##########
alter table shop_weixin_user add column created datetime NOT NULL;
alter table shop_weixin_user add column modified datetime NOT NULL;
update shop_weixin_user set created = subscribe_time,modified=subscribe_time;
######## 2014-9-30 ##########
alter table shop_weixin_user add column created datetime NOT NULL;
alter table shop_weixin_user add column modified datetime NOT NULL;
update shop_weixin_user set created = subscribe_time,modified=subscribe_time;
######## 2014-9-29 ##########
rename table shop_taobao_asynctask to shop_asynctask_taobao;
rename table shop_wexin_exam_problem to shop_weixin_exam_problem;
rename table shop_wexin_exam_paper to shop_weixin_exam_paper;
rename table shop_weixin_exam_user_proble to shop_weixin_exam_user_problem;
######## 2014-9-28 ##########
create unique index code on shop_weixin_vipcode(code);
######## 2014-9-16 ##########